--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,6 +9,8 @@ import { SITE_TITLE } from '../consts';
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
 			<HeaderLink href="/blog">Blog</HeaderLink>
+		    <HeaderLink href="/templates">Templates</HeaderLink>
+		    <HeaderLink href="/projects">Projects</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
 		</div>
 		<div class="social-links">
