--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,6 +11,7 @@ import { SITE_TITLE } from '../consts';
 			<HeaderLink href="/blog">Blog</HeaderLink>
 		    <HeaderLink href="/templates">Templates</HeaderLink>
 			<HeaderLink href="/books">Books</HeaderLink>
+            <HeaderLink href="/albums">Albums</HeaderLink>
 		    <HeaderLink href="/projects">Projects</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
 		</div>
