--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,6 +12,8 @@ import { SITE_TITLE } from '../consts';
 		    <HeaderLink href="/templates">Templates</HeaderLink>
 			<HeaderLink href="/books">Books</HeaderLink>
             <HeaderLink href="/albums">Albums</HeaderLink>
+            <HeaderLink href="/art">Art</HeaderLink>
+			<HeaderLink href="/composers">Composers</HeaderLink>
 		    <HeaderLink href="/projects">Projects</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
 		</div>
