--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,6 +14,7 @@ import { SITE_TITLE } from '../consts';
             <HeaderLink href="/albums">Albums</HeaderLink>
             <HeaderLink href="/art">Art</HeaderLink>
 			<HeaderLink href="/composers">Composers</HeaderLink>
+            <HeaderLink href="/guitar">Guitar</HeaderLink>
 		    <HeaderLink href="/projects">Projects</HeaderLink>
 			<HeaderLink href="/about">About</HeaderLink>
 		</div>
