--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,7 +13,7 @@ import Layout from '../layouts/BlogPost.astro';
 <Layout
   title="About Me"
   description="Civil engineering PhD, systems builder, and data-driven life logger."
-  pubDate={new Date('September 18 2025')}
+  pubDate="2025-09-18"
   heroImage="/images/about-lifeloggerz.png"
 >
   <p>
